syntax = "proto3";

package buildbarn.configuration.builder;

import "pkg/proto/configuration/grpc/grpc.proto";

option go_package = "github.com/buildbarn/bb-storage/pkg/proto/configuration/builder";

// We have to remap the java outer classname, as by default it will be
// 'Builder', which collides with the auto-generated Builder class for the
// proto.
option java_outer_classname = "ConfigBuilder";

message SchedulerConfiguration {
  // The gRPC endpoint at which the scheduler can be reached.
  buildbarn.configuration.grpc.ClientConfiguration endpoint = 1;

  // Add a prefix to the instance name of all requests forwarded to this
  // scheduler. By default, the prefix that was used to match the
  // request against a scheduler is stripped from the instance name.
  // This option can be used to re-add that prefix in case perfect
  // forwarding is necessary.
  string add_instance_name_prefix = 2;
}
